# fiberviewer

./: CMakeLists.txt  README.md  main.cxx
Mathematica/: FiberViewer.nb
Resources/: Info.plist.in
dependencies/: SimpleFragmentShader.fs  SimpleVertexShader copy.vs  SimpleVertexShader.vs  run.bat
lib/glm/doc/: Thumbs.db
